# klyqa-ctl

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Doxyfile  README.md  build_docs.bash  bulb.configs.json  klyqa-ctl.drawio  klyqa_ctl.py  make_package.bash  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_dev_additionals.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json  postCreateCommand.bash
klyqa-ctl-lcl/: install_in_pip
klyqa_ctl/: Dockerfile.dev  Doxyfile  LICENSE  README.md  __init__.py  __main__.py  account.py  account_control.py  controller_data.py  device.configs.json  klyqa_account.py  klyqa_ctl.py  local_controller.py  requirements.txt  vapp.py
klyqa_ctl/apidoc/: conf.py
klyqa_ctl/apidoc/_build/: .buildinfo  genindex.html  index.html  klyqa_ctl.devices.light.html  modules.html  py-modindex.html  searchindex.js
klyqa_ctl/communication/: cloud.py  connection_handler.py  device_connection_handler.py  local.py
klyqa_ctl/communication/local/: communicator.py  connection.py  connection_handler.py  data_package.py
klyqa_ctl/devices/: cloud_state.py  commands.py  commands_device.py  connection.py  device.py  device_control.py  light.py  onboard.py  response_identity_message.py  response_message.py  vacuum.py
klyqa_ctl/general/: connections.py  general.py  message.py  parameters.py  unit_id.py
test/: conftest.py  load_test.py  test_account.py  test_cli.py  test_local_controller.py  test_local_controller_commands.py  test_message.py  test_send_msg.py
(+3155 files in other folders)
