[metadata]
name = klyqa_ctl
version = attr: klyqa_ctl.__version__
author = Frederick Stallmeyer
author_email = fraizy@gmx.de
url = https://github.com/klyqa/klyqa-ctl
keywords = IoT, Klyqa, Smart, Qconnex, bulbs, lamps, vacuum, vc
project_urls = 
	GitHub: issues = https://github.com/klyqa/klyqa-ctl/issues
	GitHub: repo = https://github.com/klyqa/klyqa-ctl
description = A commandline client for controlling Klyqa smart devices
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Frederick Stallmeyer <fraizy@gmx.de>
maintainer_email = fraizy@gmx.de
license = MIT License
license_files = LICENSE


[options]
python_requires = >=3.2
include_package_data = True
packages = klyqa_ctl,klyqa_ctl.general,klyqa_ctl.devices
install_requires = 
	aiofiles >= 0.8.0
    aiohttp >= 3.8.1
    pycryptodome >= 3.15.0
    pycryptodomex >= 3.15.0
    requests >= 2.26.0
    python-slugify >= 4.0.1

[options.entry_points]
console_scripts =
    klyqa-ctl = klyqa_ctl.klyqa_ctl:main

[egg_info]
tag_build = 
tag_date = 0

